--- a/DataStructures-1/Datastructures-lib/Datastructures-lib.csproj
+++ b/DataStructures-1/Datastructures-lib/Datastructures-lib.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Frame work.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Employeestruct.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
